--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         function checkPassword() {
             const inputPassword = document.getElementById("password").value;
             const correctPassword = "tyokumen"; // ここに設定したいパスワードを入力してください
-            const videoUrl = "https://www.youtube.com/watch?v=PRJoAPH0ZGo"; // ここにYouTube動画のURLを入力してください
+            const videoUrl = "https://www.youtube.com/playlist?list=PL9EZ4WNBiCgt0FF84jlnk-ZXTz0MXqkej"; // ここにYouTube動画のURLを入力してください
             
             if (inputPassword === correctPassword) {
                 window.location.href = videoUrl;
